[package]
name = "code_exec"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres"
] }

tokio = { version = "1", features = ["full"] }

dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }

