[package]
name = "code_exec"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-web = "4"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres"
] }

tokio = { version = "1", features = ["full"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
bollard = "0.15"
actix-web-httpauth = "0.8"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", features = ["serde"] }
